corpus/alu.txt
=================
ALU operations
=================

    ADD R0, 20, R5
    ADC R1, R1, R1
    AND R1, R2, R3
    OR  R0, R0, R0

---

(source_file
    (alu_operation
        (register) (immediate (number (hex))) (register))
    (alu_operation
        (register) (register) (register))
    (alu_operation
        (register) (register) (register))
    (alu_operation
        (register) (register) (register)))
