corpus/conditions.txt
===========
Conditions
===========

KRAJ JR 4
    JP_C KRAJ
    RETI_NV
    HALT_SLE

---

(source_file
    (label) (jump_relative (immediate (number (hex))))
    (jump (condition) (immediate (label)))
    (ret (condition))
    (halt (condition)))
