corpus/memory.txt
============
Memory
============

LABEL   LOAD R0, (LABEL)
        LOADB R1, (0FF)
        LOADH R6, (R0)
        LOAD R7, (SP + 4)

        STORE R0, (LABEL)
        STOREH R1, (SP)
        STOREB R1, (SP + %D 16)

        POP R0
        PUSH SP

---

(source_file
    (label)
    (load (register) (immediate (label)))
    (load (register) (immediate (number (hex))))
    (load (register) (reg_offset (register)))
    (load (register) (reg_offset (register) (number (hex))))
    (store (register) (immediate (label)))
    (store (register) (reg_offset (register)))
    (store (register) (reg_offset (register) (number (dec))))
    (stack_operation (register))
    (stack_operation (register)))
